Bug fixes Added localized files for Draggabilly and Packery Most items should work on smaller sizes.

--- a/sass/components/_navbar.scss
+++ b/sass/components/_navbar.scss
@@ -61,3 +61,21 @@ header {
 	  font-size: 1.3rem;
 	}
 }
+
+@media #{$small-and-down} {
+	header {
+		.settings {
+			i {
+				font-size: 24px;
+			}
+		}
+		.tools {
+			i {
+				font-size: 24px;
+			}
+			.donate {
+				display: none;
+			}
+		}
+	}
+}
